src/objects/CuentaBancaria__c.object
<CustomObject>
    <fields>
        <fullName>Activa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anioexpiracion__c</fullName>
        <label>Año de expiración</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Banco__c</fullName>
        <label>Banco</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoVerificacion__c</fullName>
        <label>Código de Verificación</label>
        <length>4</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ExpDia__c</fullName>
        <label>Día Expiración</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NombreTitularCuentaBancaria__c</fullName>
        <externalId>true</externalId>
        <label>Nombre del titular de la cuenta bancaria</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroTarjetaCuentaBancaria__c</fullName>
        <label>Número de tarjeta o Cuenta Bancaria</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Poliza__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Póliza</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cuentas Bancarias</relationshipLabel>
        <relationshipName>CuentasBancarias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Cuenta Bancaria</label>
    <nameField>
        <displayFormat>CB-{0000000000}</displayFormat>
        <label>Cuenta Bancaria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuentas Bancarias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>